@@ -136,6 +136,7 @@ of the terms used in their descriptions available.
 <LI><A HREF="mod_cern_meta.html#metasuffix">MetaSuffix</A>
 <LI><A HREF="mod_mime_magic.html#mimemagicfile">MimeMagicFile</A>
 <LI><A HREF="core.html#minspareservers">MinSpareServers</A>
+<LI><A HREF="mod_mmap_static.html#mmapfile">MMapFile</A>
 <LI><A HREF="core.html#namevirtualhost">NameVirtualHost</A>
 <LI><A HREF="mod_proxy.html#nocache">NoCache</A>
 <LI><A HREF="core.html#options">Options</A>
