@@ -91,6 +91,8 @@ mod_log_config module in Apache 1.2 and up
 <DD>Determining document types using file extensions.
 <DT><A HREF="mod_mime_magic.html">mod_mime_magic</A>
 <DD>Determining document types using "magic numbers".
+<DT><A HREF="mod_mmap_static.html">mod_mmap_static</A>
+<DD>Mapping files into memory for faster serving.
 <DT><A HREF="mod_negotiation.html">mod_negotiation</A>
 <DD>Content negotiation.
 <DT><A HREF="mod_proxy.html">mod_proxy</A>
