@@ -1,4 +1,10 @@
 Changes with Apache 1.3b6
+ 
+  *) Add documentation file and src/Configuration.tmpl entry for the
+     experimental mod_mmap_static module. Because although it is and marked as
+     an experimental one it is distributed and thus should be documented and
+     prepared for configuration the same way as all others modules. 
+     [Ralf S. Engelschall]
 
   *) Add query (-q) option to apxs support tool to be able to manually query
      specific settings from apxs. This is needed for instance when you
